# comfyui-krea2edit

./: CHANGELOG.md  README.md  __init__.py  pyproject.toml
tests/: conftest.py  test_prompt_weights.py  test_wrapper_signature.py
workflows/: krea2_identity_edit.json
