[project]
name = "comfyui-krea2edit"
description = "Krea 2 Identity Edit — in-context instruction-edit nodes for the Krea 2 model: source-image appearance preservation (VAE reference tokens + 3D-RoPE), image-grounded instruction encoding, a reference-fidelity dial (ref_boost), and the training-matched FIT reference geometry."
version = "1.2.2"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.urls]
Repository = "https://github.com/lbouaraba/comfyui-krea2edit"

[tool.comfy]
PublisherId = "conradlocke"
DisplayName = "Krea 2 Identity Edit"
includes = []
